@@ -170,8 +170,8 @@ protected:
 
 protected:
 
-    QAction* statusBarMenuAction() const;
     QAction* showMenuBarAction()   const;
+    QAction* showStatusBarAction() const;
 
     /** Call this method from your main window to show keyboard shortcut config dialog
      *  with an extra action collection to configure. This method is called by slotEditKeys()
@@ -206,6 +206,8 @@ private Q_SLOTS:
 
     void slotToggleFullScreen(bool);
     void slotShowMenuBar();
+    void slotShowStatusBar();
+    void slotNewStatusBar(bool);
     void slotConfNotifications();
     void slotConfToolbars();
     void slotNewToolbarConfig();
